# pico-flash-id

./: CMakeLists.txt  README.md  main.c  pico-flash-id_pico_board.uf2
boards/: pico.h  pico_w.h
